# ser

./: .gitignore  README.md  benchmark_audeering_msp_dim.py  benchmark_common.py  benchmark_emotion2vec.py  benchmark_speechbrain_iemocap.py  emotion_model_benchmark_report.md  pyproject.toml
results_0408/: meta.json  plus_base.csv  plus_large.csv  plus_seed.csv  test.py
results_audeering/: audeering_msp_dim.csv  meta.json  summary_by_emotion.csv  summary_overall.csv
results_emotion2vec/: meta.json  plus_base.csv  plus_large.csv  plus_seed.csv  summary_by_emotion.csv  summary_overall.csv
results_speechbrain/: meta.json  speechbrain_iemocap.csv  summary_by_emotion.csv  summary_overall.csv
