[project]
name = "ser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "funasr>=1.3.1",
    "huggingface-hub>=1.9.1",
    "soundfile>=0.13.1",
    "speechbrain>=1.0.3",
    "soxr>=1.0.0",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchcodec>=0.11.0",
    "transformers>=4.57.1",
    "tqdm>=4.67.3",
]
